package com.directi.training.lsp.exercise.solution;

public class Duck
{
    public void quack()
    {
        System.out.println("Quack...");
    }

    public void swim()
    {
        System.out.println("Swim...");
    }
}
