
@startuml
package "com.directi.training.lsp.exercise" {
    class Duck {
        +quack(): void
        +swim(): void
    }

    class ElectronicDuck {
        -_on: boolean
        +quack(): void
        +swim(): void
        +turnOn(): void
        +turnOff(): void
    }

    class Pool {
        +run(): void
        -quack(ducks: Duck[]): void
        -swim(ducks: Duck[]): void
    }

    Pool -- Duck
    ElectronicDuck --|> Duck



 
}
@enduml
